# ENCODE-style-ChIPseq-CUT-Tag-pipeline

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  ROADMAP_v0.2.md  chipseq.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  lock-check.yml
config/: config.yaml  samples.tsv
containers/: Apptainer.align.def  Apptainer.chipseq.def  Apptainer.ci-fast.def  Apptainer.ci-lint.def  Apptainer.deeptools.def  Apptainer.fastqc.def  Apptainer.idr.def  Apptainer.macs3.def  Apptainer.multiqc.def  Apptainer.phantompeakqualtools.def  Apptainer.picard.def  Apptainer.preseq.def  Apptainer.python.def  Apptainer.runner.def  Apptainer.samtools.def  Apptainer.seacr.def  Apptainer.trim.def  Apptainer.ucsc.def  Dockerfile.runner  README.md  generate_apptainer_defs.py
docs/: assay-policy.md  configuration.md  container-usage.md  environments.md  idr-contract.md  local-trial-checklist.md  output-contract.md  qc-interpretation.md  quickstart.md  reference-resources.md  reproducibility-policy.md  sample-sheet.md
docs/architecture/: artifact-adoption-decision.md  artifact-inventory.yaml  artifact-roadmap.md  bulk-rnaseq-adapter-decision.md  omics-intake-bundle-consumption.md  platform-overview.md
docs/archive/: reconstruction-deep-research-report-shell-era.md
docs/developer/: add-output-or-assay-checklist.md  no-hardcoding.md
docs/development/: 2026-07-02-agent-layer-boundary-design.md  2026-07-03-run-lifecycle-progress-boundary-design.md  adapter-conformance.md  api-validation-mvp.md  config-validator-decomposition-checkpoint-2.md  config-validator-decomposition-checkpoint.md  config-validator-decomposition.md  coverage-policy.md  frontend-visual-direction.md  harness.md  legacy-test-migration.md  local-platform-runtime.md  loop-engineering.md  real-execution-harness.md  split-pr-retrospective.md  workflow-platform-agent-roadmap.md  workflow-platform-api-contract.md  workflow-platform-frontend-ux.md
docs/operations/: snakemake-lint-warnings.md  snakemake-lint-warnings.txt
docs/release-checks/: public-data-execution-report-template.md  stage13-real-data-validation.md  stage16-real-run-report-audit.md  stage27-public-data-validation-plan.md  stage27b-metadata-ci-plan.md  stage33-containerization-plan.md  stage35-docker-runner-smoke.md  stage36-singularity-runner-smoke.md  stage37-full-chipseq-real-run.md  v0.1.0-beta.md  v0.2.0-rc1-release-notes.md
frontend/: components.json  index.html  openapi.json  orval.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: bulk-rnaseq-unavailable.spec.ts  durable-run.spec.ts  global-teardown.ts  input-workbench.spec.ts  navigation.spec.ts
frontend/scripts/: clean-generated.js  run-playwright-e2e.mjs
frontend/src/: App.test.tsx  App.tsx
profiles/default/: config.yaml
profiles/hpc/: config.yaml
scripts/: aggregate_qc_summary.py  assemble_qc_summary.py  atac_idr_summary.py  audit_bulk_rnaseq_container_processes.py  broad_idr_summary.py  calc_cuttag_fragment_size.py  calc_frip.py  calc_nrf_pbc.py  check_junit_outcomes.py  chipseq.sh  compute_consensus.py  cuttag_idr_summary.py  export_openapi.py  generate_bulk_rnaseq_execution_manifest.py  generate_bulk_rnaseq_tiny_fixture.py  gtf_to_tss_bed.py  histone_utils.py  idr_reproducibility_summary.py  make_manifest.py  mnase_qc_summary.py  parse_cross_correlation.py  parse_dup_metrics.py  pooled_qc_summary.py  prepare_public_validation_inputs.py  results_visibility_fixture.py  run_local_platform.py  smoke_container_runner.sh  split_pseudoreps.py  stage5b_summary.py  stage_bulk_rnaseq_runtime_assets.py  validate_samples.py
src/encode_pipeline/: __init__.py  errors.py
test/: _tool_resolver.py  check_snakemake_lint.py  conftest.py  input_bundle_support.py  test_calc_cuttag_fragment_size.py  test_config_validator_decomposition_docs.py  test_dag_snapshots.py  test_env_pinning.py  test_gtf_to_tss_bed.py  test_histone_utils.py  test_idr_paths.py  test_no_hardcoded_paths.py  test_parse_cross_correlation.py  test_real_execution_harness_docs.py  test_shell_safety.py  test_split_pseudoreps.py  test_stage12_stress.py  test_stage18_19_stress.py  test_stage22_bigwig_stress.py  test_stage24_qc_summary_unit.py  test_stage25_manifest_stress.py  test_stage27_public_validation_plan.py  test_stage27b_metadata_ci_plan.py  test_stage27c_ci_workflow.py  test_stage28_release_readiness.py  test_stage30_strict_inputs_stress.py  test_stage32_public_report_scaffold.py  test_stage33_containerization_plan.py  test_stage34_runner_container_files.py  test_stage35_docker_smoke_report.py  test_stage36_singularity_smoke_report.py  test_stage37_container_ux.py  test_stage39_mnase_stress.py  test_stage43_artifact_inventory.py  test_stage45_artifact_model.py  test_stage47_mnase_path_contract.py  test_stage49_manifest_artifact_contract.py  test_stage4b_stress.py  test_stage4c_stress.py  test_stage50_output_contract_dry_run.py  (+35 more)
test/adapters/: test_adapter_conformance.py  test_bulk_rnaseq_adapter.py  test_bulk_rnaseq_artifacts.py  test_bulk_rnaseq_deployment.py  test_bulk_rnaseq_execution.py  test_bulk_rnaseq_execution_identity.py  test_bulk_rnaseq_execution_rrna.py  test_bulk_rnaseq_qc.py  test_bulk_rnaseq_reference_closure.py  test_bulk_rnaseq_resource_closure.py  test_bulk_rnaseq_results_contract.py  test_bulk_rnaseq_runtime_assets.py  test_encode.py  test_encode_adapter.py  test_encode_qc.py
test/api/: api_test_client.py  test_generated_client_drift.py  test_openapi_export.py  test_persistent_composition.py  test_request_limits.py  test_routes_agent.py  test_routes_artifact_downloads.py  test_routes_artifacts.py  test_routes_cancel.py  test_routes_preflight.py  test_routes_qc_metrics.py  test_routes_runs.py  test_routes_start.py  test_routes_workflows.py  test_run_history_api.py  test_startup.py
test/artifacts/: test_catalog_contracts.py  test_mnase_path_contracts.py
workflow/: Snakefile  multiqc_config.yaml
workflow/envs/: idr.yml  (+17 more)
(+566 files in other folders)
