[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encode-pipeline"
version = "0.3.0"
description = "ENCODE-style ChIP-seq / CUT&Tag / ATAC-seq / MNase-seq Snakemake pipeline library"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
api = [
    "alembic>=1.13,<2",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "redis>=7,<9",
    "rq>=2.10,<3",
    "sqlalchemy>=2,<3",
]
llm-openai = [
    "openai",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "fakeredis[lua]>=2.36,<3",
    "snakefmt",
]

[project.scripts]
encode-validate = "encode_pipeline.cli.validate:main"
encode-manifest = "encode_pipeline.cli.manifest:main"
encode-dag = "encode_pipeline.cli.dag:main"
encode-worker = "encode_pipeline.workers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"encode_pipeline.persistence" = ["alembic/script.py.mako"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src/encode_pipeline", "scripts"]
branch = true

[tool.coverage.report]
fail_under = 23
show_missing = true
skip_covered = false

[tool.snakefmt]
line_length = 120
include = '\.smk$|Snakefile'
exclude = '\.snakemake/|workflow/rules/(idr|consensus|report|qc)\.smk$'
