[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encode-pipeline"
version = "0.3.0"
description = "ENCODE-style ChIP-seq / CUT&Tag / ATAC-seq / MNase-seq Snakemake pipeline library"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
api = [
    "alembic>=1.13,<2",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "redis>=7,<9",
    "rq>=2.10,<2.11",
    "sqlalchemy>=2,<3",
]
llm-openai = [
    "openai",
]
dev = [
    "coverage[toml]>=7.10.6,<8",
    "diff-cover>=9,<10",
    "pytest",
    "pytest-cov>=7,<8",
    "ruff",
    "mypy",
    "jsonschema>=4.23,<5",
    "fakeredis[lua]>=2.36,<3",
    "snakefmt",
]

[project.scripts]
encode-validate = "encode_pipeline.cli.validate:main"
encode-manifest = "encode_pipeline.cli.manifest:main"
encode-dag = "encode_pipeline.cli.dag:main"
encode-worker = "encode_pipeline.workers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"encode_pipeline.persistence" = ["alembic/script.py.mako"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-v", "-m", "not real_execution"]
markers = [
    "real_execution: requires external workflow or bioinformatics executables and is excluded from the default suite",
]

[tool.coverage.run]
source = ["src/encode_pipeline", "scripts", "workflow/lib", "containers"]
branch = true
relative_files = true
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 78
precision = 2
show_missing = true
skip_covered = false

[tool.snakefmt]
line_length = 120
include = '\.smk$|Snakefile'
exclude = '\.snakemake/|workflow/rules/(idr|consensus|report|qc)\.smk$'
