[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encode-pipeline"
version = "0.3.0"
description = "HelixWeave local omics platform compatibility library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Zichen Yang" },
]
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.23,<5",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/ZichenYang-glitch/ENCODE-style-ChIPseq-CUT-Tag-pipeline"
Repository = "https://github.com/ZichenYang-glitch/ENCODE-style-ChIPseq-CUT-Tag-pipeline"

[project.optional-dependencies]
api = [
    "alembic>=1.13,<2",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "redis>=7,<9",
    "rq>=2.10,<2.11",
    "sqlalchemy>=2,<3",
]
llm-openai = [
    "openai",
]
dev = [
    "coverage[toml]>=7.10.6,<8",
    "diff-cover>=9,<10",
    "pytest",
    "pytest-cov>=7,<8",
    "ruff==0.15.21",
    "mypy",
    "fakeredis[lua]>=2.36,<3",
    "snakefmt",
]

[project.scripts]
encode-validate = "encode_pipeline.cli.validate:main"
encode-manifest = "encode_pipeline.cli.manifest:main"
encode-dag = "encode_pipeline.cli.dag:main"
encode-worker = "encode_pipeline.workers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"encode_pipeline.artifacts" = ["artifact-inventory.yaml"]
"encode_pipeline.persistence" = ["alembic/script.py.mako"]
"encode_pipeline.contracts.omics_intake" = ["*.schema.json"]
"encode_pipeline.contracts.nfcore_rnaseq" = ["*.json", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "-v",
    "-m",
    "not real_execution and not platform_real_execution and not bulk_rnaseq_real_execution",
]
xfail_strict = true
markers = [
    "full_main: deterministic but broader contracts run on full-main, dispatch, nightly, and release tiers",
    "platform_real_execution: requires real Redis/RQ, POSIX process control, or a real Snakemake process",
    "real_execution: requires external scientific workflow or bioinformatics executables",
    "bulk_rnaseq_real_execution: requires the pinned local nf-core/rnaseq runtime, real Redis/RQ, Docker, and controlled tiny data",
]

[tool.coverage.run]
source = ["src/encode_pipeline", "scripts", "workflow/lib", "containers"]
branch = true
relative_files = true
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 83
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.snakefmt]
line_length = 120
include = '\.smk$|Snakefile'
exclude = '\.snakemake/|workflow/rules/(idr|consensus|report|qc)\.smk$'
